# udemy-langchain-practice

./: .env-example  .gitignore  agent_with_web_search.py  main.py  pyproject.toml
